# Common.Algorithm

./: .gitignore  Algorithm.sln  CMakeLists.txt  Common.Algorithm.sln  README.md  cp4test.sh  cpp.hint  move.x64.bat  move.x64.sh  test.ps1  test.sh
Algorithm/: .gitignore  CMakeLists.txt
Algorithm.Interop/: Algorithm.Interop.csproj  Environment.cs  Hash.cs
Algorithm.UnitTest/: Algorithm.UnitTest.csproj  HashTest.cs  move.debug.sh
Base/: CMakeLists.txt  base.h
Common.Algorithm.Core/: CMakeLists.txt  CMakeSettings.json  Common.Algorithm.Core.csproj  build.ps1  build.sh  cpp.hint  test.ps1  test.sh
Common.Algorithm.Core.Test/: Common.Algorithm.Core.Test.csproj
Common.Algorithm.Core/DataStructure/Graph/: IGraph.cs
Common.Algorithm.Core/DataStructure/Graph/Properties/: GraphTypes.cs
Common.Algorithm.Core/Text/Distance/: CalculationOptions.cs  DistanceInfo.cs  IDistanceCalculator.cs
Common.Algorithm.Core/Text/Distance/Calculators/: LCS.cs
Common.Algorithm.Core/include/encode/: encode.hpp
Common.Algorithm.Core/include/hash/: hash.hpp
Common.Algorithm.Core/include/math/: math.hpp
Common.Algorithm.Core/public/: base.h
Common.Algorithm.Core/source/encode/: encode.cpp
Common.Algorithm.Core/source/hash/: hash.cpp
Common.Algorithm.Core/source/math/: math.cpp
Common.Algorithm.Core/tests/: CMakeLists.txt  test_hash.cpp
Common.Algorithm.Interop/: Common.Algorithm.Interop.csproj  Environment.cs  Hash.cs
Common.Algorithm.Interop.Test/: Common.Algorithm.Interop.Test.csproj  EnvironmentTest.cs  Environment_Tests.cs  HashTest.cs  Hash_Tests.cs
(+35 files in other folders)
